--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-i18n": "4.24.3",
     "@strapi/plugin-users-permissions": "4.24.3",
     "@strapi/strapi": "^4.24.3",
+    "api": "file:",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
