--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "sass": "^1.77.2",
-    "vite": "^4.3.2"
+    "vite": "file:"
   }
 }
